# ThorsSocket

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile.config.in  README.md  build  config.h.in  configure  configure.ac
src/: Makefile
src/ThorsSocket/: Connection.cpp  Connection.h  ConnectionFile.cpp  ConnectionFile.h  ConnectionFileDescriptor.cpp  ConnectionFileDescriptor.h  ConnectionNormal.cpp  ConnectionNormal.h  ConnectionPipe.cpp  ConnectionPipe.h  ConnectionSSL.cpp  ConnectionSSL.h  ConnectionSSocket.cpp  ConnectionSSocket.h  ConnectionSSocketUtil.cpp  ConnectionSSocketUtil.h  ConnectionSimpleFile.cpp  ConnectionSimpleFile.h  ConnectionSocket.cpp  ConnectionSocket.h  ConnectionUtil.cpp  ConnectionUtil.h  ConnectionWrapper.cpp  ConnectionWrapper.h  Makefile  MockableOSFunction.h  Notes  SSLUtil.cpp  SSLUtil.h  SecureSocketUtil.cpp  SecureSocketUtil.h  Server.cpp  Server.h  Socket.cpp  Socket.h  SocketStream.cpp  SocketStream.h  SocketStream.tpp  SocketStreamBuffer.cpp  SocketStreamBuffer.h  (+2 more)
src/ThorsSocket/test/: CertInfo.h  ConnectionFileDescriptorTest.cpp  ConnectionFileDescriptorTest.h  ConnectionFileTest.cpp  ConnectionFileTest.h  ConnectionPipeTest.cpp  ConnectionPipeTest.h  ConnectionSSocketPart2Test.cpp  ConnectionSSocketTest.cpp  ConnectionSSocketTest.h  ConnectionSSocketTest2.cpp  ConnectionSSocketUtilTest.cpp  ConnectionSSocketUtilTest.h  ConnectionSimpleFileTest.cpp  ConnectionSocketTest.cpp  ConnectionSocketTest.h  ConnectionTest.h  Logging.cpp  Mock.def  Mock2DefaultThorsSocket.h  MockDefaultThorsSocket.h  MockHeaderInclude.h  pipe.h  (+10 more)
(+12 files in other folders)
